--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
   <p>sadasdas</p>
   <header class="header">
     <img src="./images/logo.png" width="70" height="20" alt="logo muy bonito">
-    <button>Curriculum</button>
+    <button class="button">Curriculum</button>
+    <button class="button is-secondary">Curriculum</button>
   </header>
+
+  <a class="button-icon" href="tel:234243242"><img src="./icons/icon-phone.svg"></a>
+  <a class="button-icon" href="tel:234243242"><img src="./icons/icon-important_mail.svg"></a>
+  <a class="button-icon" href="tel:234243242"><img src="./icons/icon-instagram.svg"></a>
+  <a class="button-icon" href="tel:234243242"><img src="./icons/icon-twitter.svg"></a>
 </body>
 
 </html>
