--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Portafolio de Jaume</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
-<<<<<<< HEAD
   <header class="header">
     <div class="wrapper">
       <div class="header-content">
@@ -36,27 +35,6 @@
   </header>
   <div class="wrapper">
 
-=======
-  <div class="wrapper">
-    <header class="header">
-
-      <img src="./images/logo.png" width="70" height="20" alt="logo muy bonito">
-      <nav class="menu" aria-label="main-navigation">
-        <ul>
-          <li>
-            <a class="is-active" href="#main">Hola</a>
-          </li>
-          <li>
-            <a href="#project">Proyectos</a>
-          </li>
-          <li>
-            <a href="#contact">Hablemos</a>
-          </li>
-        </ul>
-      </nav>
-      <button class="button">Curriculum</button>
-    </header>
->>>>>>> feature-1
 
     <section aria-label="main" class="hero" id="main">
       <div class="hero-image">
@@ -80,21 +58,12 @@
       </div>
     </section>
 
-<<<<<<< HEAD
     <div class="project" id="project">
       <div class="project-image">
         <img src="./images/leonidas-esteban.png" alt="">
       </div>
       <div class="project-description">
         <a class="title" target="_blank" href="https://leonidasesteban.com">LeonidasEsteban.com</a>
-=======
-    <div class="testimony">
-      <div class="testimony-image">
-        <img src="./images/leonidas-esteban.png" alt="">
-      </div>
-      <div class="testimony-description">
-        <a class="testimony-title" target="_blank" href="https://leonidasesteban.com">LeonidasEsteban.com</a>
->>>>>>> feature-1
         <p>Accede a más de 120 proyectos que te ayudarán a mejorar
           tus habilidades como desarrollador Front-End.</p>
         <a target="_blank" href="https://github.com/asdas/asdas" class="button is-secondary">Ver Código</a>
@@ -103,21 +72,12 @@
 
     </div>
 
-<<<<<<< HEAD
     <div class="project">
       <div class="project-image">
         <img src="./images/marvol.png" alt="">
       </div>
       <div class="project-description">
         <a class="title" target="_blank" href="https://leonidasesteban.com">LeonidasEsteban.com</a>
-=======
-    <div class="testimony">
-      <div class="testimony-image">
-        <img src="./images/marvol.png" alt="">
-      </div>
-      <div class="testimony-description">
-        <a class="testimony-title" target="_blank" href="https://leonidasesteban.com">LeonidasEsteban.com</a>
->>>>>>> feature-1
         <p>Accede a más de 120 proyectos que te ayudarán a mejorar
           tus habilidades como desarrollador Front-End.</p>
         <a target="_blank" href="https://github.com/asdas/asdas" class="button is-secondary">Ver Código</a>
@@ -125,21 +85,12 @@
       </div>
 
     </div>
-<<<<<<< HEAD
     <div class="project">
       <div class="project-image">
         <img src="./images/netnet.png" alt="">
       </div>
       <div class="project-description">
         <a class="title" target="_blank" href="https://leonidasesteban.com">LeonidasEsteban.com</a>
-=======
-    <div class="testimony">
-      <div class="testimony-image">
-        <img src="./images/netnet.png" alt="">
-      </div>
-      <div class="testimony-description">
-        <a class="testimony-title" target="_blank" href="https://leonidasesteban.com">LeonidasEsteban.com</a>
->>>>>>> feature-1
         <p>Accede a más de 120 proyectos que te ayudarán a mejorar
           tus habilidades como desarrollador Front-End.</p>
         <a target="_blank" href="https://github.com/asdas/asdas" class="button is-secondary">Ver Código</a>
@@ -147,7 +98,6 @@
       </div>
 
     </div>
-<<<<<<< HEAD
     <form action="" method="POST" class="form">
       <div class="form-content">
         <h2 class="title">Hablemos</h2>
@@ -188,26 +138,6 @@
             Copyright 2021 - Todos los derechos reservados.
           </p>
         </div>
-=======
-    <footer class="footer">
-      <div class="footer-logo">
-        <img src="./images/logo.png" width="70" height="20" alt="logo muy bonito">
-      </div>
-
-      <div class="social">
-        <a class="button-icon" href="tel:234243242"><img src="./icons/icon-phone.svg"></a>
-        <a class="button-icon" href="tel:234243242"><img src="./icons/icon-important_mail.svg"></a>
-        <a class="button-icon" href="tel:234243242"><img src="./icons/icon-instagram.svg"></a>
-        <a class="button-icon" href="tel:234243242"><img src="./icons/icon-twitter.svg"></a>
-      </div>
-      <div class="footer-copyright">
-        <p>
-          Hecho con el ❤️ por Leo.
-        </p>
-        <p>
-          Copyright 2021 - Todos los derechos reservados.
-        </p>
->>>>>>> feature-1
       </div>
     </footer>
   </div>
